SVN::Pusher changelog:

* 0.04
    - Added the --savedate flag. (thanks to DEXTER)
    - Added the --verbatim flag. (thanks to DEXTER)

* 0.03001
    - Fixed a printing of an object variable that was eliminated, that
    caused a warning under "use warnings;".
    - Added use warnings and use strict to the top of the code.
    - Added a rudimentary 00-load.t test file.

* 0.03
    - Removed an svn-pusher remnant that caused problems when specifying paths
    in the middle of the repositories (instead of the repos root). Now
    one cannot specify the startrev as HEAD (whatever that means).

* 0.02
    - Fixed a POD problem pointed to by rajeev@tigr.org
    - Made the program throw an exception if the revision field is 
      incorrect.
    - Fixes http://rt.cpan.org/NoAuth/Bug.html?id=16779

* 0.01
    - Placed Pusher.pm in lib/SVN/Pusher.pm
    - Removed the redundant stuff from lib/SVN/Pusher.pm which remained
    there from SVN::Push.
    - Created the $sp->report() method for a derived class to perform a
    print. Moved the print() themselves to SVN::Pusher::CmdLine. That way,
    the main module has no side effects.
    - Removed the create option in init()/cmdline/etc.
    - Adapted the documentation to the new version.
    
* 0.00_03 - forked from SVN-Push, converted the functionality to work with
a modern SVN, and with what we wanted to do (just changeset propagation -
nothing more, nothing less).

SVN::Push changelog:
--------------------

- 0.02

  * fixed problem with startrev argument. Now HEAD means the
    HEAD of the given directory, not of the repository at all.

- 0.01 Initial release